# miact

./: .env  .gitignore  CONVERSATIONS.md  MIACT.spec  PROJECT_AUDIT_REPORT.md  QUERIES.md  README.md  Synopsis.md  builder.py  database.md  pyproject.toml  read_log.py  report.md  report_essentials.md  requirements.txt  run.py  run_packaged.py  setup_script.iss  test_gsm_comp.py
.github/workflows/: ci.yml
backend/: .env  main.py  requirements.txt  test_classify.py  test_extractor.py  test_faith.py  test_insert.py  test_pipeline.py  test_pipeline_2.py  test_pipeline_full_objective.py  test_pipeline_stable_wiki.py  test_pipeline_subjective.py  test_search.py  test_spacy.py
backend/archive/: base.py  grammar_rules.py
backend/config/: unified_config.py  variables.py
backend/database/: attribute_repository.py  connection.py  helpers.py  schema_manager.py
backend/domains/: domain_signals.py  general.py  news.py  opinion_aspects.py  phone_aspects.py  regions.py  tech.py
backend/extractors/: detector_subjects.py  extractor_aspect.py  extractor_content.py  extractor_data.py  fallback_scraper.py  utils.py
backend/nlp/: analyzer_sentiment.py  content_topics.py  grammar_structural.py  mapper_aspect_sentiment.py  objectivity_classifier.py  query_intent.py  relevance_engine.py  sentiment_lexicon.py
backend/orchestrators/: search_orchestrator.py
diagrams/: architecture.md  class.md  dfd.md  er_diagram.md  sequence.md  useCase.md
frontend/: index.html  package-lock.json
scripts/: clear_cache.py  manage_db.py
tmp/: compare_grammar.py  test_url_filter.py
(+82 files in other folders)
